feat: add authentication APIs
