# internal/domain/user/delivery/handler/handler.go
@@ -215,3 +215,86 @@ func (h UserHandler) GetAll(ctx echo.Context) error {
 	res.AddHTTPCode(http.StatusOK).AddStatus(apiPayload.StatusOK).AddData(data)
 	return ctx.JSON(res.HTTPCode, res)
 }
+
+// GetByToken godoc
+// @Summary Get By Token
+// @Description get user by token
+// @Tags User
+// @Accept application/json
+// @Produce json
+// @Success 200 {object} object{status=string,data=payload.GetByTokenResponse}
+// @Router /api/v1/user [get]
+func (h UserHandler) GetByToken(ctx echo.Context) error {
+	var body payload.GetByTokenRequest
+
+	if err := ctx.Bind(&body); err != nil {
+		errCustom := http_error.BadRequest(err)
+		return ctx.JSON(errCustom.HTTPCode, errCustom.HttpResponseError())
+	}
+
+	// Validate incoming data
+	if err := ctx.Validate(&body); err != nil {
+		errCustom := http_error.BadRequest(err)
+		return ctx.JSON(http.StatusBadRequest, errCustom)
+	}
+
+	// Pass body to usecase
+	body.Token = ctx.Get("token").(string)
+	data, err := h.usecases.User.GetByToken(ctx.Request().Context(), &body)
+	if err != nil {
+		httpErr, ok := err.(*http_error.Error)
+		if !ok {
+			return ctx.JSON(http.StatusInternalServerError, http_error.InternalServerError(fmt.Sprintf("Failed to get all user: %s", httpErr.Error())))
+		}
+		return ctx.JSON(httpErr.HTTPCode, httpErr.HttpResponseError())
+	}
+
+	res := new(apiPayload.BaseResponse)
+	res.AddHTTPCode(http.StatusOK).AddStatus(apiPayload.StatusOK).AddData(data)
+	return ctx.JSON(res.HTTPCode, res)
+}
+
+// Login godoc
+// @Summary Login
+// @Description user login
+// @Tags User
+// @Accept application/json
+// @Param body body payload.LoginRequest true "Login"
+// @Produce json
+// @Success 200 {object} object{status=string,data=payload.LoginResponse}
+// @Router /api/v1/user/login [post]
+func (h UserHandler) Login(ctx echo.Context) error {
+	var body payload.LoginRequest
+
+	if err := ctx.Bind(&body); err != nil {
+		errCustom := http_error.BadRequest(err)
+		return ctx.JSON(errCustom.HTTPCode, errCustom.HttpResponseError())
+	}
+
+	// Validate incoming data
+	if err := ctx.Validate(&body); err != nil {
+		errCustom := http_error.BadRequest(err)
+		return ctx.JSON(http.StatusBadRequest, errCustom)
+	}
+
+	// Pass body to usecase
+	data, err := h.usecases.User.Login(ctx.Request().Context(), &body)
+	if err != nil {
+		httpErr, ok := err.(*http_error.Error)
+		if !ok {
+			return ctx.JSON(http.StatusInternalServerError, http_error.InternalServerError(fmt.Sprintf("Failed to get all user: %s", httpErr.Error())))
+		}
+		return ctx.JSON(httpErr.HTTPCode, httpErr.HttpResponseError())
+	}
+
+	res := new(apiPayload.BaseResponse)
+	res.AddHTTPCode(http.StatusOK).AddStatus(apiPayload.StatusOK).AddData(data)
+
+	ctx.SetCookie(&http.Cookie{
+		Name:    "token",
+		Value:   data.Token,
+		Expires: data.Exp,
+		Path:    "/",
+	})
+	return ctx.JSON(res.HTTPCode, res)
+}
